--- a/.lh/.env.json
+++ b/.lh/.env.json
@@ -3,11 +3,15 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 0,
+            "activePatchIndex": 1,
             "patches": [
                 {
                     "date": 1630205055433,
                     "content": "Index: \n===================================================================\n--- \n+++ \n"
+                },
+                {
+                    "date": 1634180494936,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,46 +1,46 @@\n-APP_NAME=Laravel\n-APP_ENV=local\n-APP_KEY=base64:4sC4F00EntV3Te8x2ZPT324QeWmqVAG2UTjT7JUCJqM=\n-APP_DEBUG=true\n-APP_URL=http://localhost\n-\n-LOG_CHANNEL=stack\n-\n-DB_CONNECTION=mysql\n-DB_HOST=127.0.0.1\n-DB_PORT=3306\n-DB_DATABASE=sumberbaru\n-DB_USERNAME=root\n-DB_PASSWORD=\n-\n-BROADCAST_DRIVER=log\n-CACHE_DRIVER=file\n-QUEUE_CONNECTION=sync\n-SESSION_DRIVER=file\n-SESSION_LIFETIME=120\n-\n-REDIS_HOST=127.0.0.1\n-REDIS_PASSWORD=null\n-REDIS_PORT=6379\n-\n-MAIL_MAILER=smtp\n-MAIL_HOST=smtp.mailtrap.io\n-MAIL_PORT=2525\n-MAIL_USERNAME=null\n-MAIL_PASSWORD=null\n-MAIL_ENCRYPTION=null\n-MAIL_FROM_ADDRESS=null\n-MAIL_FROM_NAME=\"${APP_NAME}\"\n-\n-AWS_ACCESS_KEY_ID=\n-AWS_SECRET_ACCESS_KEY=\n-AWS_DEFAULT_REGION=us-east-1\n-AWS_BUCKET=\n-\n-PUSHER_APP_ID=\n-PUSHER_APP_KEY=\n-PUSHER_APP_SECRET=\n-PUSHER_APP_CLUSTER=mt1\n-\n-MIX_PUSHER_APP_KEY=\"${PUSHER_APP_KEY}\"\n-MIX_PUSHER_APP_CLUSTER=\"${PUSHER_APP_CLUSTER}\"\n+APP_NAME=Laravel\r\n+APP_ENV=local\r\n+APP_KEY=base64:+RzfEPpCGzcYisksvnTOv8D0BGVjMjgRbDfC7byTgwo=\r\n+APP_DEBUG=true\r\n+APP_URL=http://localhost\r\n+\r\n+LOG_CHANNEL=stack\r\n+\r\n+DB_CONNECTION=mysql\r\n+DB_HOST=127.0.0.1\r\n+DB_PORT=3306\r\n+DB_DATABASE=sumberbaru\r\n+DB_USERNAME=root\r\n+DB_PASSWORD=\r\n+\r\n+BROADCAST_DRIVER=log\r\n+CACHE_DRIVER=file\r\n+QUEUE_CONNECTION=sync\r\n+SESSION_DRIVER=file\r\n+SESSION_LIFETIME=120\r\n+\r\n+REDIS_HOST=127.0.0.1\r\n+REDIS_PASSWORD=null\r\n+REDIS_PORT=6379\r\n+\r\n+MAIL_MAILER=smtp\r\n+MAIL_HOST=smtp.mailtrap.io\r\n+MAIL_PORT=2525\r\n+MAIL_USERNAME=null\r\n+MAIL_PASSWORD=null\r\n+MAIL_ENCRYPTION=null\r\n+MAIL_FROM_ADDRESS=null\r\n+MAIL_FROM_NAME=\"${APP_NAME}\"\r\n+\r\n+AWS_ACCESS_KEY_ID=\r\n+AWS_SECRET_ACCESS_KEY=\r\n+AWS_DEFAULT_REGION=us-east-1\r\n+AWS_BUCKET=\r\n+\r\n+PUSHER_APP_ID=\r\n+PUSHER_APP_KEY=\r\n+PUSHER_APP_SECRET=\r\n+PUSHER_APP_CLUSTER=mt1\r\n+\r\n+MIX_PUSHER_APP_KEY=\"${PUSHER_APP_KEY}\"\r\n+MIX_PUSHER_APP_CLUSTER=\"${PUSHER_APP_CLUSTER}\"\r\n"
                 }
             ],
             "date": 1630205055433,
